infra/ipfs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ipfs
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ipfs
  template:
    metadata:
      labels:
        app: ipfs
    spec:
      containers:
        - name: ipfs
          image: docker.io/ipfs/kubo:latest
          ports:
            - containerPort: 5001
              name: api
            - containerPort: 8080
              name: gateway
            - containerPort: 4001
              name: swarm
---
apiVersion: v1
kind: Service
metadata:
  name: ipfs
  namespace: default
spec:
  selector:
    app: ipfs
  ports:
    - name: api
      port: 5001
      targetPort: 5001
    - name: gateway
      port: 8080
      targetPort: 8080
    - name: swarm
      port: 4001
      targetPort: 4001
