infra/kafka-external-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: kafka-external
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.6  
    ports:
      - port: 9092
