infra/kafka-external-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-external
  namespace: default
spec:
  type: ExternalName
  externalName: host.docker.internal
