infra/kafka-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-external
  namespace: default
spec:
  ports:
    - port: 9092
      protocol: TCP
      targetPort: 9092
  # Do not set selectors: we use an explicit Endpoints object
