infra/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: broker
          image: docker.io/confluentinc/cp-kafka:7.5.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9092
              name: client
            - containerPort: 9093
              name: controller
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-external
  namespace: default
spec:
  ports:
    - name: client
      port: 9092
      protocol: TCP
      targetPort: 9092
    - name: controller
      port: 9093
      protocol: TCP
      targetPort: 9093
  selector:
    app: kafka
  type: ClusterIP
