infra/mailhog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailhog
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      containers:
      - name: mailhog
        image: docker.io/mailhog/mailhog:latest
        ports:
        - containerPort: 1025 # SMTP Port (Where NestJS sends emails)
        - containerPort: 8025 # HTTP Web UI Port (Where you view emails)
---
apiVersion: v1
kind: Service
metadata:
  name: mailhog
  namespace: default
spec:
  selector:
    app: mailhog
  ports:
    - name: smtp
      port: 1025
      targetPort: 1025
    - name: http
      port: 8025
      targetPort: 8025
