infra/minio-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio  
spec:
  type: ExternalName
  externalName: host.docker.internal 
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
