infra/minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: docker.io/minio/minio:latest
          args:
            - server
            - /data
            - --console-address
            - ":9001"
            - --address
            - ":9000"
          ports:
            - containerPort: 9000
              name: api
            - containerPort: 9001
              name: console
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: default
spec:
  selector:
    app: minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
