infra/opensearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opensearch
  template:
    metadata:
      labels:
        app: opensearch
    spec:
      containers:
      - name: opensearch
        image: opensearchproject/opensearch:2.11.0
        ports:
        - containerPort: 9200
          name: rest
        - containerPort: 9600
          name: performance
---
apiVersion: v1
kind: Service
metadata:
  name: opensearch
  namespace: default
spec:
  selector:
    app: opensearch
  ports:
    - name: rest
      port: 9200
      targetPort: 9200
