infra/solana-test-validator.yaml
apiVersion: v1
kind: Service
metadata:
  name: solana-rpc
  labels:
    app: solana-validator
spec:
  type: ClusterIP
  selector:
    app: solana-validator
  ports:
    - name: rpc
      protocol: TCP
      port: 8899
      targetPort: 8899
    - name: ws
      protocol: TCP
      port: 8900
      targetPort: 8900
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solana-validator
  labels:
    app: solana-validator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solana-validator
  template:
    metadata:
      labels:
        app: solana-validator
    spec:
      containers:
      - name: solana-validator
        image: docker.io/solanalabs/solana:v1.18.15
        command: ["solana-test-validator"]
        args:
          - "--reset"
          - "--quiet"
          - "--bind-address"
          - "0.0.0.0"
          - "--gossip-host"
          - "127.0.0.1"
          - "--gossip-port"
          - "8001"
        # args:
        #   - "--reset"
        #   - "--quiet"
        #   - "--rpc-bind-address"
        #   - "0.0.0.0"
        #   - "--bind-address"
        #   - "0.0.0.0"
        #   - "--gossip-host"
        #   - "127.0.0.1"
        #   - "--gossip-port"
        #   - "8001"
        #   - "--tpu-port"
        #   - "8003"
        ports:
        - containerPort: 8899
          name: rpc
        - containerPort: 8900
          name: ws
        # Solana can be resource-heavy, so we give it some breathing room
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            cpu: 2000m
            memory: 4Gi
