infra/submitter-bridge.yaml

apiVersion: v1
kind: Service
metadata:
  name: anchor-submitter
spec:
  ports:
    - port: 50051
      protocol: TCP
      targetPort: 50051
---

apiVersion: v1
kind: Endpoints
metadata:
  name: anchor-submitter
subsets:
  - addresses:
      - ip: 192.168.1.6   
    ports:
      - port: 50051
