infra/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: default
  annotations:
    # kubernetes.io/ingressClassName: "nginx"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  ingressClassName: nginx 
  rules:
    - http:
        paths:
          - path: /auth-server
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 80
