infra/major-project-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: major-project-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "5"
    nginx.ingress.kubernetes.io/limit-connections: "10"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
spec:
  ingressClassName: nginx 
  rules:
    - http: 
        paths:
          - path: /auth-server
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 80
          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: auth 
                port:
                  number: 8090
          - path: /api/v1/query
            pathType: Prefix
            backend:
              service:
                name: query-service
                port:
                  number: 8081
          - path: /api/v1/ingest
            pathType: Prefix
            backend:
              service:
                name: ingest-service
                port:
                  number: 3001
          - path: /api/v1/validator
            pathType: Prefix
            backend:
              service:
                name: validator
                port:
                  number: 8084
          - path: /api/v1/scheduler
            pathType: Prefix
            backend:
              service:
                name: anchoring-scheduler
                port: 
                  number: 4100
          - path: /api/v1/indexer
            pathType: Prefix
            backend:
              service:
                name: indexer
                port:
                  number: 8083
          - path: /api/v1/notifications
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 3000
          - path: /api/v1/escrow
            pathType: Prefix
            backend:
              service:
                name: escrow-service
                port:
                  number: 8095
          - path: /api/v1/analytics
            pathType: Prefix
            backend:
              service:
                name: analytics-api-service
                port:
                  number: 5001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
